--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,10 @@
 <div class="wrapper sticky">
   <nav class="navbar-fixed-top">
     <ul>
-        <li><a (click)="signupAction()">SignUp</a></li>
-        <li><a (click)="loginAction()">Login</a></li>
+      <li><a (click)="signupAction()">SignUp</a></li>
+      <li><a (click)="loginAction()">Login</a></li>
     </ul>
   </nav>
 </div>
+
+<app-athos></app-athos>
