--- a/src/app/athos/athos.component.html
+++ b/src/app/athos/athos.component.html
@@ -4,9 +4,8 @@
       <app-textarea></app-textarea>
     </div>
     <div class="top-right">
-      <img src="assets/images/athos.jpg" alt="robot" />
+      <img src="assets/images/design.jpg" alt="robot" />
       <div class="battery">
-        <p>Battery</p>
         <div class="battery-level">
           <mat-progress-bar mode="determinate" value="60"></mat-progress-bar>
         </div>
