--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,6 +12,7 @@ body {
 .header {
   padding: 60px;
   text-align: center;
+ /* background: #1abc9c; */
   background: #1abc9c;
   color: white;
 }
@@ -112,7 +113,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #35bfe5;
+  background-color: #bc4d56;
+ /* background-image: linear-gradient(315deg, #c8c1c1 0%, #4a0404 74%);
+*/
 }
 
 nav {
