--- a/src/app/task/task.component.css
+++ b/src/app/task/task.component.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content:center;
-  background-color: #35bfe5;
+  background-color: #305965;
 }
 
 nav {
@@ -59,24 +59,24 @@ a:hover::after {
   .wrapper {
     height: auto;
   }
-  
+
   nav {
     flex-direction: column;
     align-items: center;
   }
-  
+
   a.logo {
     margin-top: 1.5em;
     margin-bottom: 1.5em;
     margin-right: 0px;
   }
-  
+
   ul {
     width: 100%;
     margin-bottom: 1em;
     justify-content: space-between;
   }
-  
+
   ul li a {
     margin-left: 0px;
   }
@@ -86,16 +86,16 @@ a:hover::after {
   a.logo {
     margin: 1.5em;
   }
-  
+
   ul {
     flex-direction: column;
   }
-  
+
   ul li {
     margin: 0.3em;
     text-align: center;
   }
-  
+
   ul li a {
     margin-left: 0px;
   }
